# arcprize

./: .buildinfo  .ctags  .gitignore  CHANGELOG.rst  LICENSE  README.rst  index.html  objects.inv  pyproject.toml  searchindex.js  session-1.md  tree.txt
.clerk/: geometor-arcprize_docs.md  geometor-arcprize_src.md  geometor-arcprize_tree.txt
_modules/: index.html
_sources/: about.rst.txt  index.rst.txt  intro.rst.txt
about/: index.html
artifacts/: arc-solver-assistant.xml
changelog/: index.html
connect/: index.html
demos/: anim2.sh  arc-animation-generator.sh  arc-gen-models.py  frames.txt  index.html  omega.py  omega2.py  playwright_test.py  random_full_rotate.py  random_rotate.py  rotation_puzzle_results_20240801_135149.csv  rotation_puzzle_results_20240801_141304.csv  rotation_puzzle_results_20240801_184533.csv  rotation_puzzle_results_20240801_190015.csv  rotation_puzzle_results_20240801_191052.csv  rotation_puzzle_results_20240801_210756.csv  rotation_puzzle_results_20240801_220628.csv  rotation_puzzle_results_20240801_220628.json  rotation_puzzle_results_20240801_232553.csv  rotation_puzzle_results_20240801_232553.json  rotation_puzzle_results_20240802_064340.csv  rotation_puzzle_results_20240802_064340.json  rotation_puzzle_results_20240802_071347.csv  rotation_puzzle_results_20240802_071347.json  rotation_puzzle_results_20240802_081926.csv  rotation_puzzle_results_20240802_081926.json  rotation_puzzle_results_20240802_082305.csv  rotation_puzzle_results_20240802_082305.json  rotation_puzzle_results_20240802_084405.csv  rotation_puzzle_results_20240802_084405.json
docsrc/: carousel.py  conf.py  connect.rst  glossary.rst  index.rst  intro.rst  refs.bib  todos.rst
first-six/: audio.py  function_test.py  gemini.py  gemini4.py  gemini5.py  gemini6.py  gemini_client.py  gemini_logger2.py  gemini_logger3.py  gemini_logger4.py  gemini_report_2.html.j2  gemini_solver2.py  gemini_solver3.py  public_prompt.txt
genindex/: index.html
glossary/: index.html
intro/: index.html
log/: atom.xml  index.html
logs/: index.html
mission/: index.html
modules/: index.html
py-modindex/: index.html
refs/: get_transcript.py  index.html
search/: index.html
sessions/: index.html
todos/: index.html
usage/: index.html
(+7305 files in other folders)
